.deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contact-service
spec:
  selector:
    matchLabels:
      app: contact-service
  template:
    metadata:
      labels:
        app: contact-service
    spec:
      containers:
      - name: contact-service
        image: contact-service-image
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8000
