.deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: contact-service-service
spec:
  selector:
    app: contact-service
  ports:
  - port: 80
    targetPort: 8000
